Remove extra functions

--- a/zeroth.ipynb
+++ b/zeroth.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.6 64-bit ('3.8.5': venv)",
-   "display_name": "Python 3.8.6 64-bit ('3.8.5': venv)",
+   "name": "Python 3.8.6 64-bit ('3.8.5')",
+   "display_name": "Python 3.8.6 64-bit ('3.8.5')",
    "metadata": {
     "interpreter": {
      "hash": "ca5784e80d0cd95dc70d3368c96900f6f0c4ccdefacd5a1bed7ac7ddb3461c75"
@@ -28,17 +28,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import sys\n",
-    "\n",
-    "# import matplotlib.pyplot as plt\n",
+    "import copy\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from scipy.integrate import solve_ivp\n",
-    "\n",
-    "\n",
+    "import scipy\n",
+    "from scipy.integrate import solve_ivp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Planet:\n",
     "    def __init__(self, e, a, omega, Omega, i, r_p, first_periastron=0):\n",
     "        self.e = e  # eccentricity\n",
@@ -80,8 +86,7 @@
     "\n",
     "    def getNu_from_time(self, time):  # returns true anomaly when time is inputted\n",
     "        # use solutions of differential equation\n",
-    "        self.alphas(time)\n",
-    "        pass\n",
+    "        return self.alphas(time)\n",
     "\n",
     "    def getPosition_from_nu(self, nu):  # returns position when true anomaly is inputted\n",
     "        n_x = -np.cos(self.i) * np.cos(self.Omega) * np.sin(self.omega + self.nu) - np.sin(self.Omega) * np.cos(self.omega + self.nu)\n",
@@ -100,26 +105,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class System:\n",
-    "  def __init__(obj, star: dict, planet_list, sort=True):\n",
-    "    obj.star = star\n",
-    "    if sort:\n",
-    "      obj.planet_list = sorted(planet_list, key = lambda p: p.a) # if planet object not dictionary\n",
-    "    else:\n",
-    "      obj.planet_list = planet_list\n",
+    "    def __init__(self, star_prop: dict, planet_list, sort=True):\n",
+    "        self.star_prop = star_prop\n",
+    "        if sort:\n",
+    "            self.planet_list = sorted(planet_list, key=lambda p: p.a)  # if planet object not dictionary\n",
+    "        else:\n",
+    "            self.planet_list = planet_list\n",
+    "        self.img_split = 100\n",
+    "        self.time_split = 100\n",
+    "        self.n = 1.0\n",
+    "        period_constant = (2 * np.pi) / ((scipy.constants.G * self.star_prop['Mass'] * 1.989e30)**0.5)\n",
+    "        for planet in self.planets:\n",
+    "            planet.setPeriod(period_constant * ((planet.a * 6.96e8)**1.5) / (36 * 24))  # days\n",
+    "        self.total_time = max([planet.period for planet in self.planets])\n",
+    "        for planet in self.planets:\n",
+    "            planet.setSplit(self.time_split * planet.period / self.total_time)\n",
     "\n",
-    "  def getPosition(index, time):\n",
-    "    return obj.planet_list[index].getPosition(time)\n",
+    "    def initialize_star(self, limb_func, split=1000):\n",
+    "        star = np.zeros((2 * split + 1, 2 * split + 1))\n",
+    "        total = 0\n",
+    "        for i in range(-split, split + 1):\n",
+    "            rg_j = abs(int((split**2 - i**2)**0.5))\n",
+    "            for j in range(-rg_j, rg_j + 1):\n",
+    "                x = (i) / split\n",
+    "                y = (j) / split\n",
+    "                cosine = abs((1 - x**2 - y**2)**0.5)\n",
+    "                lum = limb_func(cosine)\n",
+    "                total += lum\n",
+    "                star[split + i][split + j] = lum\n",
     "\n",
-    "  def plot(model='Quadratic',normalise=False):\n",
-    "    \"\"\"Plot the transit curve\"\"\"\n",
+    "        return star, total\n",
     "\n",
-    "  def visualise(): #not sure what arguments need to be here\n",
-    "    \"\"\"Plot actual images from Earth's vantage point\"\"\""
+    "    def lum_wrt_coord(self, img, tot):\n",
+    "        split = int((len(img) - 1) / 2)\n",
+    "\n",
+    "        def shadow(self, coord_x, coord_y, R_p):\n",
+    "            nonlocal img, tot\n",
+    "            x, y, Rp = int(coord_x * split), int(coord_y * split), int(R_p * split)\n",
+    "            for i in range(-Rp, Rp + 1):\n",
+    "                if y - i >= -split and y - i <= split:\n",
+    "                    rg_j = abs(int((Rp**2 - i**2)**0.5))\n",
+    "                    for j in range(-rg_j, rg_j + 1):\n",
+    "                        if x + j >= -split and x + j <= split:\n",
+    "                            m = split - y + i\n",
+    "                            n = split + x + j\n",
+    "                            lum = img[m][n]\n",
+    "                            tot = tot - lum\n",
+    "                            img[m][n] = 0\n",
+    "\n",
+    "        def lum():\n",
+    "            nonlocal tot\n",
+    "            return tot\n",
+    "\n",
+    "        def star():\n",
+    "            nonlocal img\n",
+    "            return img\n",
+    "\n",
+    "        return shadow, lum, star\n",
+    "\n",
+    "    def limb_dark(self, cosine):\n",
+    "        if len(self.u) == 2:\n",
+    "            return 1 - self.u[0] * (1 - cosine) - self.u[1] * ((1 - cosine)**2)\n",
+    "        else:\n",
+    "            raise NameError('Check the u values')\n",
+    "\n",
+    "    def getPosition(self, index, time):\n",
+    "        return self.planet_list[index].getPosition(time)\n",
+    "\n",
+    "    def calc_lum(self, model='Quadratic', normalise=False):\n",
+    "        if model == 'Quadratic':\n",
+    "            self.u = [0.1, 0.2]\n",
+    "            self.star, self.total = self.initialize_star(limb_func=self.limb_dark, split=self.img_split)\n",
+    "        else:\n",
+    "            raise NameError(\"Model does not exist\")\n",
+    "        self.timespan = np.linspace(0, int(self.n) * self.total_time, int(self.n) * self.time_split + 1)\n",
+    "        lum = []\n",
+    "        for timing in self.timespan:\n",
+    "            update, get_lum, get_star = self.lum_wrt_coord(copy.deepcopy(self.star), copy.deepcopy(self.total))\n",
+    "            for planet in self.planet_list:\n",
+    "                x, y = planet.getPosition(timing / planet.period)\n",
+    "                if y * (planet.i - (np.pi / 2)) > 0:  # Only the part of orbit which is away from us\n",
+    "                    continue\n",
+    "                if x**2 + y**2 > 2 * ((1 + planet.r_p)**2):\n",
+    "                    continue\n",
+    "\n",
+    "                update(x, y, planet.r_p)\n",
+    "            lum.append(get_lum())\n",
+    "        lum = np.array(lum)\n",
+    "        if normalise:\n",
+    "            lum = lum / max(lum)\n",
+    "        return lum\n",
+    "\n",
+    "    def plot(self, model='Quadratic', normalise=False):\n",
+    "        \"\"\"Plot the transit curve\"\"\"\n",
+    "        lum = self.calc_lum(model, normalise)\n",
+    "\n",
+    "        fig = plt.figure(figsize=(20, 12))\n",
+    "        ax = fig.add_subplot(111)\n",
+    "        ax.scatter(self.timespan / 100, lum, s=1, c='b')\n",
+    "        ax.set_xlim(0, max(self.timespan) / 100)\n",
+    "        ax.tick_params(axis='x', labelsize=14)\n",
+    "        ax.tick_params(axis='y', labelsize=14)\n",
+    "        ax.set_xlabel('Time in days', fontsize=18)\n",
+    "        ax.set_ylabel('Relative luminosity', fontsize=18)\n",
+    "        ax.set_title('Multiple Exoplanets - {} Planet system'.format(len(self.planet_list)), fontsize=22)\n",
+    "        ax.grid(True)\n",
+    "\n",
+    "        plt.show()\n",
+    "\n",
+    "    def visualise(self):  # not sure what arguments need to be here\n",
+    "        \"\"\"Plot actual images from Earth's vantage point\"\"\"\n",
+    "        pass\n"
    ]
   },
   {
